--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,8 +23,13 @@
   margin-left: auto;
 }
 
-@media (max-width: 892px) {
+@media (max-width: 912px) {
   .footer {
-    height: 24px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .margin-left-auto {
+    margin-left: 0;
+    margin-top: 18px;
   }
 }
