--- a/src/components/Pool/Pool.css
+++ b/src/components/Pool/Pool.css
@@ -50,3 +50,25 @@
 .justify-center {
   align-content: center;
 }
+
+p {
+  font-size: 20px;
+}
+
+@media (max-width: 464px) {
+  p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 432px) {
+  p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 400px) {
+  p {
+    font-size: 14px;
+  }
+}
